--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --open --port 3000 --contentBase src --hot --host 192.168.1.104",
+    "dev": "webpack-dev-server --open --port 3000 --contentBase src --hot",
     "build": "webpack"
   },
   "keywords": [],
@@ -17,9 +17,11 @@
     "mint-ui": "^2.2.13",
     "moment": "^2.24.0",
     "vue": "^2.5.17",
+    "vue-preview": "^1.1.3",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.2",
-    "vue2-preview": "^1.0.5"
+    "vue2-preview": "^1.0.5",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
